--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mcmu",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "mcmu.js",
   "scripts": {
-    "test": "node cmd.js"
+    "test": "echo hey!"
   },
-  "bin":{
-    "mcmu":"./index.js"
+  "bin": {
+    "mcmu": "./mcmu.js"
   },
   "author": "FancyFlame",
   "license": "ISC"
